fixed issue causing big bodies from getting cut off

--- a/styles/layouts/accordianLayout.module.css
+++ b/styles/layouts/accordianLayout.module.css
@@ -19,7 +19,7 @@
 
 .body {
   overflow: hidden;
-  max-height: 1000px;
+  max-height: 10000px;
   transition: max-height 600ms ease-in-out;
 }
 
